--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<lick rel="stylesheet" href="style.css"
 	<title>Super great title: 11 : 17</title>
 </head>
 <body>
